frontend/src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.body {
  display: flex;
  position: relative;
  /* flex-wrap: nowrap; */
  /*   */
}

.red {
  background-color: red;
  color: white;
  border-color: white;
}

.left {
  width: 5vw;
  height: 100vh;
  background-color: black;
  color: white;
  font-size: 20px;
  text-wrap: wrap;
  display: flex;
  flex-direction: column;
  align-items: center;
  white-space: initial;
}
.ago {
  position: absolute;
  left: 70%;
  top: 35%;
}

.chatbutton {
  position: absolute;
  left: 70%;
  top: 25%;
}

.orange {
  background-color: orange;
}

.newgroup {
  height: 100vh;
  width: 75vw;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 50px;
  gap: 20px;
}

#groupname {
  width: 300px;
  height: 40px;
}

#firstmessage {
  width: 500px;
  height: 60px;
}

.edit {
  width: 50px;
  height: 50px;
}

.groupinfo {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.chatmenu {
  height: 15%;
  width: 100%;
  border-bottom: 1px solid black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;
  padding-left: 5%;
  padding-right: 5%;
  position: sticky;
  top: 0;
  left: 0;
}

.chatmenutop {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 10%;
}

.searchbar {
  width: 200px;
  height: 25px;
}

.chatmenubot {
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.mid {
  border-right: 3px solid black;
  height: 100vh;
  width: 20vw;
}

.overflowdiv {
  overflow-y: scroll;
  height: 85%;
}

.wrap {
  border-bottom: 1px solid black;
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 100px;
  cursor: pointer;
  position: relative;
}
.chatinfotop {
  height: 10%;
  width: 100%;
  /* position: sticky; */
  display: flex;
  gap: 10px;
  padding: 20px;
  align-items: center;
  border-bottom: 2px solid black;
  justify-content: space-between;
}

.wrap:hover {
  background-color: blue;
  color: white;
}

.messagebox {
  height: 100vh;
  width: 75vw;
  position: relative;
  display: flex;
  flex-direction: column;
  /* overflow: hidden; */
}

#entermessage {
  width: 60vw;
  height: 60px;
  display: flex;
  vertical-align: center;
  margin: auto;
}

.grouped {
  display: flex;
  gap: 30px;
}

.row {
  display: flex;
  gap: 30px;
  align-items: center;
}

.newchatrow {
  display: flex;
  gap: 10px;
  align-items: center;
}

.col {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.messagemasterwrapper {
  /* display: flex;
  flex-direction: column;
  justify-content: end; */
  /* display: grid;
  grid-template-rows: 1fr;
  align-items: end; */
  width: 100%;
  height: 83%;
  overflow-y: scroll;
}

.topbuttons {
  /* margin-left: 80%; */
  display: flex;
  gap: 30px;
}

.messagewrapper {
  width: 100%;
}

.grid {
  width: 80%;
  height: 50%;
  display: grid;
  grid-template-columns: repeat(auto-fit, 200px);
  padding: 30px;
  grid-gap: 10px;
}

.useravatarwrapper {
  max-width: 300px;
}

.message {
  display: flex;
  gap: 10px;
  margin: 10px;
  padding: 0 20px;
  justify-content: start;
  align-items: center;
}

.imgcontainer {
  height: 100vh;
  width: 75vw;
  background-image: url("https://images.unsplash.com/photo-1548620848-d375c7919ea2?q=80&w=2669&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
  background-size: cover;
}

.message.right {
  justify-content: end;
}

.azure {
  background-color: azure;
  border: 1px solid azure;
  border-radius: 25%;
  padding: 10px 20px;
}

.chatinfo {
  position: absolute;
  top: 25%;
  left: 25%;
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: left;
}

.avatar {
  width: 90px;
  height: 90px;
  border-radius: 50%;
  border: 3px solid black;
  /* background-color: gold; */
  background-image: url("https://steamuserimages-a.akamaihd.net/ugc/2492254803012160630/33FDDE88D49A58AF9C263ED4354B43193F50903A/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false");
  background-size: cover;
  background-repeat: no-repeat;
}

.chatavatar {
  position: absolute;
  top: 5%;
  left: 5%;
}

.bottomsection {
  width: 100%;
  height: 7%;
  border: 1px solid black;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* #root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
} */

